# capsuleFW

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FilesystemModel.cpp  FilesystemModel.h  Makefile  bedcontrol.cpp  bedcontrol.h  bedserialport.cpp  bedserialport.h  c10imageprovider.cpp  c10imageprovider.h  c10printimage.cpp  c10printimage.h  capsuleFW  capsuleFW.pro  capsuleFW.pro.user.4.10-pre1  cmake_install.cmake  common.h  factoryreset.cpp  factoryreset.h  filevalidator.cpp  filevalidator.h  font.qrc  hdmicontrol.cpp  hdmicontrol.h  image.qrc  imagescaler.cpp  imagescaler.h  infosetting.cpp  infosetting.h  kinetimecalc.cpp  kinetimecalc.h  l10imageprovider.cpp  l10imageprovider.h  l10printimage.cpp  l10printimage.h  lang_ko.qm  lang_ko.ts  language.qrc  (+54 more)
Qml/: AcceptBTN.qml  BackBTN.qml  BusyErrorPopup.qml  Calibration.qml  CalibrationBTN.qml  CalibrationPopUp.qml  CircularProgressBar.qml  DefaultCalibration.qml  DefaultFinishMenu.qml  DefaultListView.qml  DefaultPopup.qml  DefaultUpdateView.qml  ErrorPopup.qml  FactoryResetPopup.qml  FileInfoPopup.qml  FileListDelegate.qml  FileSelectList.qml  FileSelectList.qml.autosave  FileSelectPopUp.qml  FirmUpdateFileList.qml  FirmwareUpdatePopup.qml  HeightCalibration.qml  ImageBTN.qml  InfoPopup.qml  IpPopup.qml  LEDCalibration.qml  LcdOff.qml  MainMenu.qml  MaterialListDelegate.qml  MaterialSelectList.qml  MaterialSelectList.qml.autosave  MenuBTN.qml  MultiBTN.qml  NetworkMenu.qml  ParentDir.qml  PrintErrorPopup.qml  PrintMenu.qml  PrintingCompleted.qml  PrintingError.qml  PrintingPopup.qml  (+29 more)
VKeyboard/: basekeyboard.cpp  basekeyboard.h  digitsframe.ui  engkeyboard.cpp  engkeyboard.ui  extrakeyboard.cpp  extrakeyboard.h  extrakeyboard.ui  keyboardwidget.cpp  keyboardwidget.h  keyboardwidget.ui  ruskeyboard.ui  specialchkeyboard.cpp  specialchkeyboard.h  specialchkeyboard.ui
capsuleFW_autogen/: moc_predefs.h  mocs_compilation.cpp
capsuleFW_autogen/EWIEGA46WW/: moc_bedcontrol.cpp  moc_bedserialport.cpp  moc_filevalidator.cpp  moc_logger.cpp  moc_networkcontrol.cpp  moc_printscheduler.cpp  moc_qmlconnecter.cpp  moc_resinupdater.cpp  moc_schedulerthread.cpp  moc_updater.cpp  moc_websocketclient.cpp  moc_wifiinfo.cpp  moc_wpa.cpp  moc_ymodem.cpp  qrc_image.cpp  qrc_qml.cpp
cmake/Hunter/: config.cmake
common/: jsonreadsetting.cpp  jsonreadsetting.h  jsonsetting.cpp  jsonsetting.h  jsonutil.h  jsonwritesetting.cpp  jsonwritesetting.h
config/: capsuleDjangoService  capsuleReactService  capsuleSetting.json  config_list  react.service
config/make-image/factory-reset/: create-factory-reset
config/resin/: Graphy.json  ODS.json  Vericom.json  default.json
dt/: image.h
install/: hixPrinterInstall.sh
install/config/: capsuleSetting.json  daphne.service
package/: install.sh  update.sh
package/targets/: capsuleSetting.json  lightdm.conf  rc.local
package/usb/: update.sh
package/usb/sw/: update.sh
package/usb_temp/resin/: test1.json  test2.json
wpa_ctrl/: build_config.h  common.h  includes.h  os_unix.c  wpa_ctrl.c  wpa_debug.h
zip/: zip.cpp  zip.h  zip_file.hpp
